# BinaryConvolutionTheory

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
src/: __init__.py
src/bct/: __init__.py
src/bct/theorems/: __init__.py  lemma4_thm9_fermat.py  remaining_lemmas_theorems.py  thm10_structure.py  thm11_conjecture1_abundance.py  thm1_2_upper_bound.py  thm3_equality_condition.py  thm4_5_mersenne.py  thm6_fermat_resonance.py  thm7_prop5_sweep.py
src/btc/theorems/: thm1_2_upper_bound.py  thm3_equality_condition.py
src/core/: __init__.py  bct_invariants.py  binary_utils.py
src/experiments/: bct_zeta_correspondence.py
src/theorems/: __init__.py  lemma4_thm9_fermat.py  remaining_lemmas_theorems.py  thm10_structure.py  thm11_conjecture1_abundance.py  thm1_2_upper_bound.py  thm3_equality_condition.py  thm4_5_mersenne.py  thm6_fermat_resonance.py  thm7_prop5_sweep.py  thm8_even_perfect.py
tests/: __init__.py  test_bct.py
