[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binary-convolution-theory"
version = "1.0.0"
description = "Binary Convolution Theory: A Structural Approach to Perfect Numbers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Masamichi Iizumi", email = "m.iizumi@miosync.email"},
]
maintainers = [
    {name = "Masamichi Iizumi", email = "m.iizumi@miosync.email"},
]
keywords = [
    "number-theory",
    "perfect-numbers",
    "binary-convolution",
    "mathematics",
    "prime-numbers",
    "mersenne",
    "fermat",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/miosync-masa/BinaryConvolutionTheory"
Documentation = "https://github.com/miosync-masa/BinaryConvolutionTheory#readme"
Repository = "https://github.com/miosync-masa/BinaryConvolutionTheory.git"
Issues = "https://github.com/miosync-masa/BinaryConvolutionTheory/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bct", "bct.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
